hanu-deploy-apps/openstack/rabbitmq/Deployment_rabbitmq-rabbitmq-exporter.yaml
# Source: rabbitmq/templates/monitoring/prometheus/exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "rabbitmq-rabbitmq-exporter"
  labels:
    release_group: rabbitmq
    application: prometheus_rabbitmq_exporter
    component: exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: rabbitmq
      application: prometheus_rabbitmq_exporter
      component: exporter
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: rabbitmq
        application: prometheus_rabbitmq_exporter
        component: exporter
      namespace: 
    spec:
      securityContext:
        runAsUser: 65534
      serviceAccountName: "rabbitmq-rabbitmq-exporter"
      nodeSelector:
        openstack-control-plane: "enabled"
      terminationGracePeriodSeconds: 30
      containers:
        - name: rabbitmq-exporter
          image: "deploy001:5000/kbudde/rabbitmq-exporter:v0.21.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: metrics
              containerPort: 9095
