hanu-deploy-apps/openstack/rabbitmq/Pod_rabbitmq-test.yaml

# Source: rabbitmq/templates/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "rabbitmq-test"
  labels:
    release_group: rabbitmq
    application: rabbitmq
    component: test
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
    "helm.sh/hook": test-success
spec:
  securityContext:
    runAsUser: 999
  serviceAccountName: rabbitmq-test
  nodeSelector:
    openstack-control-plane: "enabled"
  restartPolicy: Never
  containers:
    - name: rabbitmq-rabbitmq-test
      image: "deploy001:5000/rabbitmq:3.7.13-management"
      imagePullPolicy: IfNotPresent
      
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
      command:
        - /tmp/rabbitmq-test.sh
      volumeMounts:
        - name: pod-tmp
          mountPath: /tmp
        - name: rabbitmq-bin
          mountPath: /tmp/rabbitmq-test.sh
          subPath: rabbitmq-test.sh
          readOnly: true
  volumes:
    - name: pod-tmp
      emptyDir: {}
    - name: rabbitmq-bin
      configMap:
        name: "rabbitmq-rabbitmq-bin"
        defaultMode: 0555
