hanu-deploy-apps/openstack/rabbitmq/StatefulSet_rabbitmq-rabbitmq.yaml

# Source: rabbitmq/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "rabbitmq-rabbitmq"
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: rabbitmq
    application: rabbitmq
    component: server
spec:
  serviceName: rabbitmq
  replicas: 3
  podManagementPolicy: "Parallel"
  selector:
    matchLabels:
      release_group: rabbitmq
      application: rabbitmq
      component: server
  template:
    metadata:
      labels:
        release_group: rabbitmq
        application: rabbitmq
        component: server
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "b9bc97c51bbfb2552c9b8b4f32236c912fb361ecc0fbb6772ea9cf220efdc24d"
        configmap-etc-hash: "d70a2e5d47e2605314bd473dc215fed7e0af0694c671317408aa0eab925b5120"
        secret-rabbit-admin-hash: "2641d086b49fa469af2d5a9cd0b91e086a3c997edcfc2c1f575d0ccee39943b6"
        secret-erlang-cookie-hash: "f9c2a35397a22b98d875eec1818b3f87bbd58e7d4976a0c5fc1087700958862d"
    spec:
      securityContext:
        runAsUser: 999
      serviceAccountName: "rabbitmq-rabbitmq"
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - rabbitmq
                  - key: application
                    operator: In
                    values:
                    - rabbitmq
                  - key: component
                    operator: In
                    values:
                    - server
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: "enabled"
      containers:
        - name: rabbitmq
          image: "deploy001:5000/rabbitmq:3.7.13"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            readOnlyRootFilesystem: false
            runAsUser: 999
          command:
            - /tmp/rabbitmq-start.sh
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672
            - name: clustering
              protocol: TCP
              containerPort: 25672
          readinessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 10
            exec:
              command:
              - /tmp/rabbitmq-readiness.sh
          livenessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 10
            exec:
              command:
              - /tmp/rabbitmq-liveness.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
            - name: rabbitmq-bin
              mountPath: /tmp/rabbitmq-start.sh
              subPath: rabbitmq-start.sh
              readOnly: true
            - name: rabbitmq-bin
              mountPath: /tmp/rabbitmq-readiness.sh
              subPath: rabbitmq-readiness.sh
              readOnly: true
            - name: rabbitmq-bin
              mountPath: /tmp/rabbitmq-liveness.sh
              subPath: rabbitmq-liveness.sh
              readOnly: true
            - name: rabbitmq-etc
              mountPath: /etc/rabbitmq/enabled_plugins
              subPath: enabled_plugins
              readOnly: true
            - name: rabbitmq-etc
              mountPath: /etc/rabbitmq/rabbitmq.conf
              subPath: rabbitmq.conf
              readOnly: true
      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: rabbitmq-bin
          configMap:
            name: "rabbitmq-rabbitmq-bin"
            defaultMode: 0555
        - name: rabbitmq-etc
          configMap:
            name: "rabbitmq-rabbitmq-etc"
            defaultMode: 0444
        - name: rabbitmq-erlang-cookie
          secret:
            secretName: "rabbitmq-erlang-cookie"
            defaultMode: 0444
        - name: rabbitmq-data
          hostPath:
            path:  /ssd-data/rabbitmq-data
            type: DirectoryOrCreate
